--- a/.github/workflows/OData-Inspector.yml
+++ b/.github/workflows/OData-Inspector.yml
@@ -23,7 +23,7 @@ jobs:
       env:
         GREETINGS: 'Hello, .NET developers!' #${{ secrets.GITHUB_TOKEN }}
       with:
-        branch: master
+        branch: test_branch_2
         targetBranch: master
         repoOwner: ${{ github.repository_owner }}
         repoName: ${{ github.repository }}
